--- a/ninja-express/package.json
+++ b/ninja-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express",
+  "name": "ninja-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1"
+  }
 }
